fix z-index bug between suggestion list and user list

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,7 +11,7 @@ $gray-medium-light: #eaeaea;
 	box-sizing: border-box;
 }
 
-/*universal */
+/* universal */
 
 body {
 	padding-top: 60px;
@@ -65,6 +65,7 @@ p {
 }
 
 /* header */
+
 #logo {
 	float: left;
 	margin-right: 10px;
@@ -81,6 +82,7 @@ p {
 }
 
 /* footer */
+
 footer {
 	margin-top: 45px;
 	padding-top: 5px;
@@ -110,7 +112,7 @@ footer {
 		small {
 			display: block;
 			float: none;
-			margin-bottom: lem;
+			margin-bottom: 1em;
 		}
 		ul {
 			float: none;
@@ -136,6 +138,10 @@ footer {
 /* sidebar */
 
 aside {
+	/* Ensure the sidebar column is on a higher stack than the user list column */
+	position: relative;
+	z-index: 1000;
+
 	section.user_info {
 		margin-top: 20px;
 	}
@@ -159,6 +165,18 @@ aside {
 			margin-top: 0px;
 		}
 	}
+	textarea {
+		height: 100px;
+		margin-bottom: 5px;
+	}
+}
+
+/* Sticky Panel overrides */
+.panel.panel-default {
+	/* overflow: visible is required for absolute children to show outside the panel */
+	overflow: visible !important;
+	/* z-index must be high to override the stacking context of the sticky behavior */
+	z-index: 1001 !important;
 }
 
 .gravatar {
@@ -315,19 +333,12 @@ input {
 			}
 		}
 	}
-	/* self-clearing method:*/
 	&:after {
 		content: ".";
 		display: block;
 		height: 0;
 		clear: both;
 		visibility: hidden;
-		* html & {
-			height: 1%;
-		}
-		*:first-child + html & {
-			overflow: hidden;
-		}
 	}
 }
 
@@ -363,13 +374,6 @@ input {
 	}
 }
 
-aside {
-	textarea {
-		height: 100px;
-		margin-bottom: 5px;
-	}
-}
-
 span.image {
 	margin-top: 10px;
 	input {
@@ -377,34 +381,41 @@ span.image {
 	}
 }
 
+/* Autocomplete Results */
 .autocomplete-results {
-	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+	position: absolute !important;
+	top: 100%;
+	left: 0;
+	width: 350px;
+	background-color: white !important;
+	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 	border: 1px solid #ccc;
-	background-color: white;
 	border-radius: 4px;
 	margin-top: 2px;
+	z-index: 100000 !important;
 
 	.list-group-item {
 		border: none;
 		border-bottom: 1px solid #eee;
 		cursor: pointer;
+		background-color: white !important;
 
 		&:last-child {
 			border-bottom: none;
 		}
 
 		&:hover {
-			background-color: #f5f5f5;
+			background-color: #f5f5f5 !important;
 			text-decoration: none;
 		}
 	}
 }
 
 mark {
-	background-color: #ffeb3b; 
-	color: #000; 
-	font-weight: bold; 
-	padding: 0 3px; 
-	border-radius: 3px; 
-	border: 1px solid #e6db55; 
+	background-color: #ffeb3b;
+	color: #000;
+	font-weight: bold;
+	padding: 0 3px;
+	border-radius: 3px;
+	border: 1px solid #e6db55;
 }
